# sdk-nrf

./: CMakeLists.txt  CODEOWNERS  README.rst  west.yml
.github/workflows/: check-oss-history.yml
applications/asset_tracker/: README.rst  sample.yaml
applications/asset_tracker_v2/: sample.yaml
applications/nrf_desktop/: README.rst
applications/serial_lte_modem/: sample.yaml
doc/: CMakeLists.txt
doc/config-pass-1/: conf.py
doc/config-pass-2/: conf.py
doc/nrf/: conf.py  gs_programming.rst  known_issues.rst  shortcuts.txt  ug_bootloader_adding.rst  ug_bootloader_config.rst  ug_nrf9160.rst
doc/nrfxlib/: conf.py
include/: adp536x.h  bl_crypto.h  bl_storage.h  bl_validation.h  date_time.h  esb.h  event_manager.h  event_manager.rst  fw_info.h  st25r3911b_nfca.h  supl_os_client.rst
include/bluetooth/: conn_ctx.h  enocean.h  gatt_dm.h  gatt_pool.h  scan.h  scan.rst
include/caf/: ble_state.rst  buttons.rst  caf_overview.rst  leds.rst  sensor_sampler.rst
include/drivers/: gps.h
include/modem/: at_cmd.rst  modem_info.h
include/net/: aws_fota.rst  aws_jobs.h  ftp_client.h  lwm2m_client_utils.h  lwm2m_client_utils.rst  nrf_cloud.rst  nrf_cloud_agps.rst
include/nfc/ndef/: ch.h  (+2 more)
include/tfm/: tfm_ioctl_api.rst
include/zigbee/: zigbee_app_utils.rst
lib/date_time/: date_time.c
lib/lte_link_control/: lte_lc.c
modules/mbedtls/: Kconfig
modules/memfault-firmware-sdk/: memfault_integration.c
samples/: Kconfig
samples/customer_repo/custom_lib_cmake/: CMakeLists.txt
samples/customer_repo/custom_lib_cmake/src/: main.c
submanifests/: README.rst
(+112 files in other folders)
